# product-agentic

./: .env.example  eval_results.json  eval_scenarios.py  evaluator_ids.json  guardrail_id.json  main.py  memory_id.json  pyproject.toml  server.py  setup_evaluators.py  slack_app.py
actions/: guides.yaml  registry.yaml
benchmarks/: response_time.py
checks/: architecture.py
contracts/: diagnose_visibility.yaml  update_main_product_setting.yaml  update_product_display.yaml  update_product_page_hidden.yaml  update_product_page_status.yaml
docs/: button-design.md  harness-guardrails.md  multi-agent-design.md  response-template-design.md
domain/: launch_check.yaml  visibility_chain.yaml
knowledge/: API-플로우-상세.md  관리자센터-권한체계.md  관리자센터-페이지-UI-구조.md  구독상품-생성관리.md  노출-테스트-결과.md  단건상품-생성관리.md  도메인-지식-종합.md  메인상품페이지-마스터페이지-API.md  사이드패널-UX-플로우.md  시나리오-액션-매핑.md  오피셜클럽-론칭-가이드.md
orchestrator/: config.py  main.py
scenarios/: README.md
schema/: types.py  types.ts
scripts/: setup_knowledge_base.py  start-test-env.sh
src/: context.py  diagnose_engine.py  domain_loader.py  harness.py  memory.py  router.py  vector_router.py  wizard.py
tests/: mock_responses.py  test_agent_system.py  test_domain_loader.py  test_e2e_conversation.py  test_e2e_live.py  test_flow.py  test_flow_guard.py  test_harness.py  test_harness_regression.py  test_multi_agent_scenarios.py  test_validator.py  test_wizard_flow.py  test_wizard_scenarios.py
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
wizards/: diagnose.yaml  hidden.yaml  launch_check.yaml  product_hide.yaml  (+3 more)
(+108 files in other folders)
