[project]
name = "us-product-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.41.0",
    "strands-agents>=1.30.0",
    "strands-agents-tools>=0.2.22",
    "uvicorn>=0.42.0",
]
