[project]
name = "us-product-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.41.0",
    "strands-agents[otel]>=1.30.0",
    "strands-agents-tools>=0.2.22",
    "uvicorn>=0.42.0",
    "langfuse>=4.0.0",
    "strands-agents-evals>=0.1.10",
    "requests>=2.32.5",
    "opentelemetry-sdk>=1.40.0",
    "bedrock-agentcore-sdk>=10.0.2",
    "bedrock-agentcore>=1.4.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
